--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -16,6 +16,9 @@ mybatis-plus:
   #logging.level.com.looedu.mapper= info
 
 spring:
+  output:
+    ansi:
+      enabled: always
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/stransaction?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
