--- a/Backend/src/main/resources/application_backup.properties
+++ b/Backend/src/main/resources/application_backup.properties
@@ -13,7 +13,7 @@ mybatis-plus.configuration.map-underscore-to-camel-case= true
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/stransaction?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=zaoMENG45.
+spring.datasource.password=zaoMEN45.
 
 
 # ≈‰÷√»’÷æ ‰≥ˆ
