--- a/Backend/src/main/resources/application_backup.properties
+++ b/Backend/src/main/resources/application_backup.properties
@@ -10,10 +10,10 @@ mybatis-plus.configuration.map-underscore-to-camel-case= true
 
 #logging.level.com.looedu.mapper= info
 
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/stransaction?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
-spring.datasource.username=root
-spring.datasource.password=zaoMEN45.
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/transaction?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+#spring.datasource.username=root
+#spring.datasource.password=123456
 
 
 # ≈‰÷√»’÷æ ‰≥ˆ
