--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -61,6 +61,14 @@
             <version>2.2</version>
         </dependency>
 
+        <!-- 格式化对象，方便输出日志 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.1.41</version>
+        </dependency>
+
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
