添加登录拦截器，修改验证方式，保留session以及token两种方法

--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -39,6 +39,11 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.shiro</groupId>
