finish pagination in home and search

--- a/Fontend/manifest.json
+++ b/Fontend/manifest.json
@@ -72,7 +72,12 @@
     "mp-toutiao" : {
         "usingComponents" : true
     },
-    "uniStatistics": {  
-        "enable": false
+    "uniStatistics" : {
+        "enable" : false
+    },
+    "h5" : {
+        "devServer" : {
+            "port" : 9985
+        }
     }
 }
