--- a/Frontend/manifest.json
+++ b/Frontend/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name" : "CampusTransaction",
+    "name" : "校园交易",
     "appid" : "__UNI__9913E22",
-    "description" : "",
+    "description" : "专为在校大学生设计的校园二手交易平台",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
