--- a/Frontend/manifest.json
+++ b/Frontend/manifest.json
@@ -103,9 +103,10 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "",
+        "appid" : "wx464797debd653635",
         "setting" : {
-            "urlCheck" : false
+            "urlCheck" : false,
+            "es6" : true
         },
         "usingComponents" : true
     },
@@ -127,6 +128,7 @@
         },
         "router" : {
             "mode" : "hash"
-        }
+        },
+        "title" : "CampusTP"
     }
 }
