handle wechat title-bar problem bu left two pinterest bug in wechat-mini

--- a/Frontend/manifest.json
+++ b/Frontend/manifest.json
@@ -127,7 +127,7 @@
             "port" : 9985
         },
         "router" : {
-            "mode" : "hash"
+            "mode" : "history"
         },
         "title" : "CampusTP"
     }
