--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -17,8 +17,9 @@
 
     <properties>
         <java.version>11</java.version>
-        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
         <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.lomboktarget>${java.version}</maven.compiler.lomboktarget>
     </properties>
 
@@ -196,6 +197,10 @@
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
